--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -61,6 +61,8 @@
   <a href = "https://en.wikipedia.org/wiki/Steven_Pinker">Steven Pinker</a>
 </blockquote>    
 
+"Polly likes cake more than she like me" -Strunk and White "Elements of Style"
+
 <blockquote>
   "Language disguises thought."
   &mdash; <a href = "https://en.wikipedia.org/wiki/Ludwig_Wittgenstein">Ludwig Wittgenstein</a>
