--- a/workshop1/w1.html
+++ b/workshop1/w1.html
@@ -61,7 +61,9 @@
   <a href = "https://en.wikipedia.org/wiki/Steven_Pinker">Steven Pinker</a>
 </blockquote>    
 
-  "Polly likes cake more than she like me" -Strunk and White "Elements of Style"
+<blockquote>
+  "Polly likes cake more than she like me" -Strunk and White "Elements of Style"   
+</blockquote>
 
 <blockquote>
   "Language disguises thought."
