--- a/workshop1/w4.html
+++ b/workshop1/w4.html
@@ -23,7 +23,7 @@
 	
 
     <blockquote>
-      <a href = "http://globe-views.com/dcim/dreams/pig/pig-01.jpg"><img src = "https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt = "Ada Lovelace" class = "headshot"></a>
+      <a href = "http://globe-views.com/dcim/dreams/pig/pig-01.jpg"><img src = "http://globe-views.com/dcim/dreams/pig/pig-01.jpg" alt = "Ada Lovelace" class = "headshot"></a>
       
       "The <a href = "https://www.fourmilab.ch/babbage/sketch.html">Analytical
       Engine</a> has no pretensions whatever to <i>originate</i>
